# spmi-project

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
artifacts/: model.pkl
src/: logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
static/: styles.css
templates/: index.html  predict.html
